# Widrolo-Engine-3D

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Documentation/: Untitled Diagram.drawio
Documentation/doxygen/: Doxyfile  DoxygenLayout.xml
Documentation/doxygen/Manual/About/: 1_Introduction.md  2_List_of_Features.md
Documentation/doxygen/Manual/Getting Started/: 1_Introduction.md  2_Scripting.md
GameData/: steam_appid.txt
GameData/Data/CompDef/: BaseComponents.yaml
GameData/Data/Materials/: $Sample.yaml  CroSONMat.yaml  DirtGroundMat.yaml  MonkeyMat.yaml  ProtoMat.yaml  Skybox.yaml  SolidBlue.yaml  TexlessInv.yaml  TexlessReg.yaml
GameData/Data/Materials/Lit/: MonkeyMat.yaml  ProtoMat.yaml
GameData/Data/Materials/PBR/: BreadMat.yaml  ConcreteMat.yaml  DirtGroundMat.yaml  WoodMat.yaml
GameData/Data/Materials/Unlit/: MissingMat.yaml
GameData/Data/Meshes/: Bread.glb  Cube.glb  Skysphere.glb
GameData/Data/Sectors/: freecam.yaml  root.yaml  testworld.yaml
GameData/Data/Shaders/: ColorCorrectFragment.glsl  ColorCorrectVertex.glsl  atlasFragment.glsl  atlasVertex.glsl  basicTexturedFragment.glsl  basicVertex.glsl  lineFragment.glsl  lineVertex.glsl  litFragment.glsl  pbrFragment.glsl  screenFragment.glsl  skyFragment.glsl  spriteFragment.glsl  spriteVertex.glsl  triangleBlueFragment.glsl  triangleInvertFragment.glsl  triangleRegVertex.glsl  triangleVertex.glsl
GameData/Data/Shaders/definitions/: $Sample.yaml  BasicPBR.yaml  Sky.yaml  blue.yaml  vertColor.yaml  vertColorInvert.yaml
GameData/Data/UISheets/: testui.yaml
GameData/Data/UISheets/Documents/: testui.uidoc
GameData/Licenses/ImGui Node Editor/: License.txt
Tools/Hasher/: main.c
Tools/LLM/Prompts/: Code Critic.txt  Documentation Writer.txt
Tools/Packaging/: package.py
libs/SDL3-3.2.24/lib/: SDL3.lib
libs/Steamworks-SDK/: info.txt
libs/libogg/lib/: libogg_static.lib  libogg_staticd.lib
libs/tinyxml2-11.0.0/lib/: tinyxml2.lib  tinyxml2d.lib
src/: WGL.h  WidroloFramework.h
src/Editor/: EditorDefines.h
src/Editor/Components/: AnyComponent.cpp  AnyComponent.h  EditorCompFactory.cpp  EditorCompFactory.h
src/Editor/Core/: Editor.cpp  Editor.h
src/Editor/Core/Handlers/: CompSettingsRepo.cpp  CompSettingsRepo.h  EditorUIHandler.cpp  EditorUIHandler.h  MenubarHandler.cpp  MenubarHandler.h
src/Editor/EditorWidgets/: AboutWidget.cpp  AboutWidget.h  ComponentList.cpp  ComponentList.h  ComponentSettings.cpp  ComponentSettings.h  EntityList.cpp  EntityList.h  SectorList.cpp  SectorList.h  Viewport.cpp  Viewport.h
src/Editor/EditorWidgets/Tests/: NodeTestWidget.cpp  NodeTestWidget.h
src/Editor/EditorWidgets/Tools/: AnimationEditorWidget.cpp  AnimationEditorWidget.h  ResolutionFinderWidget.cpp  ResolutionFinderWidget.h
src/Editor/MenubarItems/File/: Menubar_Exit.cpp  Menubar_Exit.h  Menubar_RunGame.cpp  Menubar_RunGame.h
src/Editor/MenubarItems/Help/: Menubar_About.cpp  Menubar_About.h  Menubar_NodeTest.cpp  Menubar_NodeTest.h
src/Editor/MenubarItems/Tools/: Menubar_AnimEditor.cpp  Menubar_AnimEditor.h  Menubar_ResFind.cpp  Menubar_ResFind.h
src/Editor/Types/: ComponentSettingDefinition.h  EditorState.h  EditorSystems.h  MenubarItem.h
src/Engine/: EngineDefines.h  Entry-Point.cpp
src/Engine/Components/: AudioComponent.cpp  AudioComponent.h  Component.cpp  Component.h  InputComponent.cpp  InputComponent.h  RNGComponent.cpp  RNGComponent.h  SectorComponent.cpp  SectorComponent.h
src/Engine/Components/Creation/: CompID.h  ComponentFactory.cpp  ComponentFactory.h  EngineComponentList.xmacro
src/Engine/Components/Physics/: BoundaryAreaComponent.cpp  BoundaryAreaComponent.h  CircleAreaComponent.cpp  CircleAreaComponent.h  CylinderAreaComponent.cpp  CylinderAreaComponent.h  DynamicBody.cpp  DynamicBody.h  RectAreaComponent.cpp  RectAreaComponent.h  StaticBody.cpp  StaticBody.h
src/Engine/Components/Rendering/: AnimationRendererComponent.cpp  AnimationRendererComponent.h  CameraComponent.cpp  CameraComponent.h  DebugRendererComponent.cpp  DebugRendererComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  SpriteRendererComponent.cpp  SpriteRendererComponent.h
src/Engine/Core/: Engine.cpp  Engine.h  Widget.cpp  Widget.h
src/Engine/Core/Handlers/: AssetRepo.cpp  AssetRepo.h  AudioHandler.cpp  AudioHandler.h  InputHandler.cpp  InputHandler.h  JobHandler.cpp  JobHandler.h  PhysicsHandler.cpp  PhysicsHandler.h  RNGHandler.cpp  RNGHandler.h  RenderHandler.cpp  RenderHandler.h  TimeHandler.cpp  TimeHandler.h  TimeSystem.cpp  TimeSystem.h  UIHandler.cpp  UIHandler.h  WidgetHandler.cpp  WidgetHandler.h
src/Engine/Core/Physics/: JoltImpl.cpp  JoltImpl.h  PhysicsArea.h  PhysicsSolver.cpp  PhysicsSolver.h  PhysicsVisualizer.cpp  PhysicsVisualizer.h  SimulatableObject.cpp  (+1 more)
src/Engine/EngineWidgets/: DebugFlagsWidget.cpp  DebugFlagsWidget.h  EngineControlWidget.cpp  EngineControlWidget.h  GameSystemWidget.cpp  GameSystemWidget.h  PeripheralWidget.cpp  PeripheralWidget.h  PhysicsWatchWidget.cpp  PhysicsWatchWidget.h  RenderWatchWidget.cpp  RenderWatchWidget.h  SectorWatchWidget.cpp  SectorWatchWidget.h  StatisticsWidgets.cpp  StatisticsWidgets.h  SystemWidget.cpp  SystemWidget.h  TimeWatchWidget.cpp  TimeWatchWidget.h  TimingsWidget.cpp  TimingsWidget.h
src/Engine/Math/: Math.h  Matrix.h  Shapes.h  Transform.cpp  Transform.h  Vector.h
src/Engine/Types/: AssetMission.h  Audio.h  Blackboard.h  BlackboardVariable.cpp  BlackboardVariable.h  CommonTypes.h  CoreSystems.h  DebugFlags.h  Nullable.h  Refcounted.h  SpawnArgs.cpp  SpawnArgs.h  Version.cpp  Version.h
src/Engine/UI/: UIElement.h  UIParser.cpp  UIParser.h  UIWidget.cpp  UIWidget.h
src/Engine/Util/: BitwiseMacros.h  Conversions.h  Env.h  Log.cpp  Log.h  TextureSwizzler.cpp  TextureSwizzler.h  Time.cpp  Time.h  Timer.cpp  Timer.h
src/Engine/WTL/: allocator.h  deque.h  list.h  map.h  queue.h  vector.h
src/Engine/imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_node_editor.h
src/Game/: GameDefines.h
src/Game/Components/: Freecam.cpp  Freecam.h
src/Game/Core/: Game.cpp  Game.h  PerfTester.cpp
(+135 files in other folders)
